--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,19 @@
+# ──────────────────────────────────────────────
+# Netlify Configuration — Optimems Landing Page
+# Next.js 15 with OpenNext Adapter (automatic)
+# ──────────────────────────────────────────────
+
 [build]
   command = "npm run build"
+  publish = ".next"
 
 [build.environment]
-  NODE_VERSION = "18"
-  NPM_CONFIG_LEGACY_PEER_DEPS = "true"
+  NODE_VERSION = "22"
+  NEXT_PRIVATE_STANDALONE = "true"
 
-[functions]
-  node_bundler = "esbuild"
-
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
+# ──────────────────────────────────────────────
+# Security Headers
+# ──────────────────────────────────────────────
 
 [[headers]]
   for = "/*"
@@ -17,6 +21,12 @@
     X-Frame-Options = "DENY"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
+    X-XSS-Protection = "1; mode=block"
+    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
+
+# ──────────────────────────────────────────────
+# Cache Control — Static Assets
+# ──────────────────────────────────────────────
 
 [[headers]]
   for = "/_next/static/*"
@@ -26,24 +36,49 @@
 [[headers]]
   for = "/images/*"
   [headers.values]
-    Cache-Control = "public, max-age=31536000"
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
   for = "/*.webm"
   [headers.values]
-    Cache-Control = "public, max-age=31536000"
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
   for = "/*.svg"
   [headers.values]
-    Cache-Control = "public, max-age=31536000"
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
   for = "/*.png"
   [headers.values]
-    Cache-Control = "public, max-age=31536000"
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.jpg"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
   for = "/*.jpeg"
   [headers.values]
-    Cache-Control = "public, max-age=31536000"
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.webp"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.woff2"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# ──────────────────────────────────────────────
+# Redirects — Root to default locale
+# ──────────────────────────────────────────────
+
+[[redirects]]
+  from = "/"
+  to = "/en"
+  status = 302
+  force = false
